readable: fixed mobile menu

--- a/readable/bootstrap.css
+++ b/readable/bootstrap.css
@@ -3536,6 +3536,9 @@ body {
   background-color: #fdfdfa;
   padding-top: 20px !important;
 }
+.navbar {
+  margin-left: 16px;
+}
 .navbar .navbar-inner {
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
@@ -3633,6 +3636,22 @@ div.subnav-fixed .nav {
 .dropdown-menu li > a:hover {
   color: #c50001;
   background-color: transparent;
+}
+.navbar .nav-collapse.collapse .nav > li > a:last-child {
+  margin-bottom: 10px;
+}
+.navbar .nav-collapse.collapse li > a {
+  color: #9c0001;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+  font-weight: normal;
+}
+.navbar .nav-collapse.collapse li > a:hover {
+  color: #c50001;
+}
+.navbar .nav-collapse.collapse li > a:hover {
+  background: transparent;
 }
 .nav .dropdown .caret {
   opacity: 1;
